unpackaged/objects/wb_MemberHistory__c.object
<CustomObject>
    <description>WellBe Membership History</description>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <label>キャンセル日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>区分</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveUntil__c</fullName>
        <label>有効終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <label>会員番号</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberType__c</fullName>
        <label>会員タイプ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員契約詳細</label>
        <referenceTo>wb_MembershipDetail__c</referenceTo>
        <relationshipLabel>会員履歴</relationshipLabel>
        <relationshipName>MembershipDetailHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MembershipEndDate__c</fullName>
        <label>会員終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipStartDate__c</fullName>
        <label>会員開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipStopDate__c</fullName>
        <label>会員異動日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReplacedWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>置き換え</label>
        <referenceTo>wb_MemberHistory__c</referenceTo>
        <relationshipLabel>会員履歴</relationshipLabel>
        <relationshipName>MembershipHistoryReplacement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>f_EffectiveUntil__c</fullName>
        <formula>if(IsBlank(ReplacedWith__c),
if(IsBlank(MembershipStopDate__c),MembershipEndDate__c,MembershipStopDate__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有効終了日(F)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>f_effectiveness__c</fullName>
        <formula>if(IsBlank(ReplacedWith__c),
if( AND(MembershipStartDate__c &lt;= TODAY(),TODAY()&lt;=EffectiveUntil__c ),TRUE,FALSE ),
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>member__c</fullName>
        <label>会員</label>
        <referenceTo>wb_Member__c</referenceTo>
        <relationshipLabel>会員履歴</relationshipLabel>
        <relationshipName>MemberHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>r_effectiveness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>有効</label>
        <type>Checkbox</type>
    </fields>
    <label>会員履歴</label>
    <nameField>
        <label>会員履歴番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>